--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <div id="root"></div>
 <script type="module"
         src="/src/main.jsx"></script>
+<div class="modal-container"></div>
 </body>
 </html>
